--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Falta:
 - Radio;
-- Arte ASCII, icon, symbols :3
+- Arte ASCII, icon, symbols :3 AQUI!
 - VMobile;
 - Melhorar HTML!
 - CSS Framework?
@@ -12,14 +12,15 @@ Falta:
 }
 
 body{
+    /* background-color: turquoise; */
     margin: 0;
     padding: 0;
 }
 
-.artist-iframe{
+/* .artist-iframe{
     background-color: aqua;
     
-}
+} */
 
 .artist-iframe a:link, .artist-iframe a:visited{
     color: #000000;
@@ -37,6 +38,7 @@ main{
 
 #all{
     /* background-color: blueviolet; */
+    /* backdrop-filter: blur(2px); */
     display: flex;
     flex-flow: column wrap;
     align-items: center;
@@ -65,6 +67,7 @@ h3{
 
 #angel-name-mbti p{
     color: grey;
+    font-weight: 550;
     margin: 0;
 }
 
